# PhillyShell

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
includes/: shell.h
src/: CMakeLists.txt  cmd_parser.c  cmd_parser.h  cmd_tokenizer.c  cmd_tokenizer.h  environ.c  environ.h  exec_cmd.c  exec_cmd.h  loop.c  shell.c  shell.h  token_types.c
src/builtins/: bg.c  builtins.h  cd.c  echo.c  exit.c  fg.c  jbs.c
src/environ/: environ.c  environ.h
src/errors/: errors.c  errors.h
src/executor/: exec.c  exec.h  exec_args.c  exec_args.h  exec_cmd.c  exec_cmd.h  fs.c  fs.h  job_control.c  job_control.h  jobs.c  jobs.h
src/jobs/: job_control.c  jobs.c  jobs.h
src/parser/: cmd_parser.c  cmd_parser.h  if_list_parser.c  if_list_parser.h  list_parser.c  list_parser.h  parser.c  parser.h  parser_free.c  pipeline_parser.c  pipeline_parser.h  utils.c  utils.h
src/tokenizer/: cmd_tokenizer.c  cmd_tokenizer.h
src/tty/: readline.c  tty.c  tty.h
tests/: fsh_test.py
